[project]
name = "langchain-v0-3-deepdive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-google-genai>=2.1.5",
    "langchain-google-vertexai>=2.0.25",
    "langchain-openai>=0.3.23",
    "langsmith>=0.3.45",
    "pydantic>=2.11.7",
    "scikit-image>=0.25.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "uv>=0.7.13",
]
